# Chess

./: .gitignore  Allocate.c  CMakeLists.txt  CheckMate.c  Desk.h  Directory_Files.c  Figures.c  Figures.h  Files_functions.c  Files_functions.h  Files_functions.h.gch  Game_menu_functions.c  Game_menu_functions.h  Init.c  Init.h  Main.c  Main_Moves.c  Menu.c  Menu.h  Moves.c  Moves.h  MovesCheck.c  MovesCheck.h  README.md  chess.sln  chess.vcxproj  chess.vcxproj.filters
Chess/includes/: Desk.h  Figures.h  Game_menu_functions.h  Init.h  Menu.h  Moves.h  MovesCheck.h  OnlineConnection.h
Chess/source/: CheckMate.c  Figures.c  Files_functions.c  Game_menu_functions.c  Init.c  Main.c  Main_Moves.c  Menu.c  Moves.c  OnlineConnection.c
SavedGames/: 0.1.txt  0.txt  1.txt  10.txt  111.txt  12.txt  122.txt  123412341234.txt  2.txt  2333.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  Budapesht_gambit_b.txt  Kinds_mat_w.txt  asdf.txt  pat.txt  tftdfhd.txt
includes/: Allocate.h  CheckMate.h  Desk.h  Directory_files.h  Game_menu_functions.h  Menu.h  Moves.h  MovesCheck.h
source/: Allocate.c  CheckMate.c  Figures.c  Files_functions.c  Game_menu_functions.c  Init.c  Main.c  Main_Moves.c  Menu.c  Moves.c  MovesCheck.c
test_games/: test_game.txt
x64/Debug/: chess.exe.recipe  chess.ilk  chess.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  chess.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
